--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,5 +19,44 @@ body {
 }
 
 .header {
-
+    border-bottom: 1px solid #e5e5e5;
+    padding: 25px 0;
 }
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.header .сontainer {
+    display: flex;
+    align-items: center;
+}
+
+.logo img {
+    vertical-align: bottom;
+}
+
+.menu {
+    margin-left: 244px;
+}
+
+.menu ul {
+    list-style: none;
+    display: flex;
+}
+
+.menu-item {
+    margin-right: 115px;
+}
+
+.menu-item a {
+    font-size: 15px;
+    color: #030305;
+    text-decoration: none;
+}
+
+.menu-item a:hover {
+    border-bottom: 2px solid black;
+}
+
